sonar lint errors