@@ -3,7 +3,6 @@ package backend.siptis.service.report.projects;
 import backend.siptis.commons.ServiceAnswer;
 import backend.siptis.commons.ServiceMessage;
 import backend.siptis.model.entity.editors_and_reviewers.ProjectStudent;
-import backend.siptis.model.entity.notifications.Activity;
 import backend.siptis.model.entity.project_management.Project;
 import backend.siptis.model.entity.user_data.UserCareer;
 import backend.siptis.model.repository.project_management.ProjectRepository;
@@ -19,7 +18,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -64,13 +62,13 @@ public class ProjectReportServiceImpl implements ProjectReportService {
     }
 
     @Override
-    public ServiceAnswer getActiveAndInactiveProjects(){
+    public ServiceAnswer getActiveAndInactiveProjects() {
         List<Project> projectList = projectRepository.findAll();
         projectList = projectList.stream()
                 .sorted((p1, p2) -> p1.getState().getName()
-                        .compareTo(p2.getState().getName())).collect(Collectors.toList());
+                        .compareTo(p2.getState().getName())).toList();
         String fileName = ProjectsByStateReportTool.generateReport(projectList);
-        String key = ""; // cloud.uploadReportToCloud(fileName);
+        String key = cloud.uploadReportToCloud(fileName);
         return ServiceAnswer.builder().serviceMessage(ServiceMessage.DOCUMENT_GENERATED).data(key).build();
     }
 
